# wioterminal-rs

./: Cargo.toml  README.md  build.rs  memory.x
menu/: Cargo.toml  LICENSE-MIT  README.md
menu/examples/: simple.rs
menu/src/: lib.rs
src/: buttons.rs  cli.rs  lib.rs  macros.rs  main.rs  usb_serial.rs  usb_serial_log.rs  wifi.rs
src/ui/: display.rs  mod.rs  screen_manager.rs
